engine/tests/fixtures/invalid/http-api-semantics/shape-output-job.tg
shape shape_output_task_export_job {
  name "Export Job"
  description "Accepted job"

  fields {
    job_id uuid required
  }

  status active
}
